--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
   #- docker build --build-arg PLATFORM=linux-arm -t raymondmm/sonweb:linux-arm -f Dockerfile.linux-arm .
 
   - >
+  echo $TRAVIS_TAG
     if [ -n "$TRAVIS_TAG" ]; then
       # Push all images
       travis_retry timeout 5m docker login -u="$DOCKER_USER" -p="$DOCKER_PASS"
