--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 
   # Build all images
   - docker build --build-arg PLATFORM=linux-amd64 -t raymondmm/sonweb:linux-amd64 -f Dockerfile.linux-amd64 .
-  #- docker build --build-arg PLATFORM=linux-arm -t raymondmm/sonweb:linux-arm -f Dockerfile.linux-arm .
+  - docker build --build-arg PLATFORM=linux-arm -t raymondmm/sonweb:linux-arm -f Dockerfile.linux-arm .
 
   - >
 
@@ -20,19 +20,17 @@ script:
       # Push all images
       travis_retry timeout 5m docker login -u="$DOCKER_USER" -p="$DOCKER_PASS"
       docker tag raymondmm/sonweb:linux-amd64 raymondmm/sonweb:${TRAVIS_TAG}-linux-amd64
-      #docker tag raymondmm/sonweb:linux-arm raymondmm/sonweb:${TRAVIS_TAG}-linux-arm
+      docker tag raymondmm/sonweb:linux-arm raymondmm/sonweb:${TRAVIS_TAG}-linux-arm
 
       # push version for each platform
       docker push raymondmm/sonweb:${TRAVIS_TAG}-linux-amd64
-      #docker push raymondmm/sonweb:${TRAVIS_TAG}-linux-arm
+      docker push raymondmm/sonweb:${TRAVIS_TAG}-linux-arm
 
       # Download manifest-tool
       wget https://github.com/estesp/manifest-tool/releases/download/v0.7.0/manifest-tool-linux-amd64
       mv manifest-tool-linux-amd64 manifest-tool
       chmod +x manifest-tool
       # Push manifest-list
-      #./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "raymondmm/sonweb:${TRAVIS_TAG}-OS-ARCH" --target "raymondmm/sonweb:$TRAVIS_TAG"
-      #./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "raymondmm/sonweb:${TRAVIS_TAG}-OS-ARCH" --target "raymondmm/sonweb:latest"
-      ./manifest-tool push from-args --platforms linux/amd64 --template "raymondmm/sonweb:${TRAVIS_TAG}-OS-ARCH" --target "raymondmm/sonweb:$TRAVIS_TAG"
-      ./manifest-tool push from-args --platforms linux/amd64 --template "raymondmm/sonweb:${TRAVIS_TAG}-OS-ARCH" --target "raymondmm/sonweb:latest"
+      ./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "raymondmm/sonweb:${TRAVIS_TAG}-OS-ARCH" --target "raymondmm/sonweb:$TRAVIS_TAG"
+      ./manifest-tool push from-args --platforms linux/amd64,linux/arm --template "raymondmm/sonweb:${TRAVIS_TAG}-OS-ARCH" --target "raymondmm/sonweb:latest"
     fi
