--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,17 @@ script:
 
   # Build all images
   - docker build --build-arg PLATFORM=linux-amd64 -t raymondmm/sonweb:linux-amd64 -f Dockerfile.linux-amd64 .
+  
+  # prepare qemu
+  - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+  # get qemu-arm-static binary
+  - mkdir tmp
+  - >
+    pushd tmp &&
+    curl -L -o qemu-arm-static.tar.gz https://github.com/multiarch/qemu-user-static/releases/download/v2.9.1-1/qemu-arm-static.tar.gz &&
+    tar xzf qemu-arm-static.tar.gz &&
+    popd
+  
   - docker build --build-arg PLATFORM=linux-arm -t raymondmm/sonweb:linux-arm -f Dockerfile.linux-arm .
 
   - >
