--- a/Dockerfile.linux-amd64
+++ b/Dockerfile.linux-amd64
@@ -3,7 +3,7 @@ FROM amd64/alpine
 MAINTAINER Raymond Mouthaan <raymondmmouthaan@gmail.com>
 LABEL Description="This image is used to start SonWEB which is a administrative Website for Devices flashed with Sonoff-Tasmota."
 
-ENV SONWEB_VERSION 2018-02-27
+ENV SONWEB_VERSION 2018-03-25
 
 # Add basics
 RUN apk update && apk upgrade && apk add --no-cache \
@@ -38,6 +38,7 @@ ADD start.sh /bootstrap/
 RUN chmod +x /bootstrap/start.sh
 
 # Create a symlink to Sonweb data directory
+RUN chown -R apache:apache /app/sonweb/data
 RUN ln -s /app/sonweb/data /data
 RUN chown -R apache:apache /data
 VOLUME /data
